ingressroute-rook-ceph-dashboard-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rook-ceph-dashboard-internal-https
  namespace: rook-ceph
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`rook-ceph-dashboard-nodeport.mks-jerome-01.lysdemolab.fr`)
    middlewares:
#    - name: security
#    - name: ratelimit
    services:
    - name: rook-ceph-mgr-dashboard-external-https
      port: 32512
#  tls:
#    certResolver: letsencrypt
